--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -32,7 +32,7 @@ on:
 
 env:
   AWS_REGION: us-west-2                   # set this to your preferred AWS region, e.g. us-west-1
-  ECR_REPOSITORY: textadventuregame          # set this to your Amazon ECR repository name
+  ECR_REPOSITORY: y3y5z1y5/textadventuregame         # set this to your Amazon ECR repository name
   ECS_SERVICE: advgameservice                 # set this to your Amazon ECS service name
   ECS_CLUSTER: advgame                # set this to your Amazon ECS cluster name
   ECS_TASK_DEFINITION: newtest-revision1.json # set this to the path to your Amazon ECS task definition
